# lao

./: .copyright_ignore  .gitignore  CMAKE_K1B_D  CMAKE_KV3  CMAKE_ST200  INSTALL  README  README-Florent  lao-kernels-tirex.sh
LAO/: CMakeLists.txt  TargetDoc.cmake  Traces.make.in  doxy.config.in  doxymain.doxy  run-test
LAO/CDT/: CDT.h.in  CMakeLists.txt  Maintainer
LAO/CDT/BSL/: BBTree.c  BSL.c  Buffer.c  CMakeLists.txt  ETable.c  Escape.c  Except.c  FTypes.c  Flip16.c  Flip32.c  Flip64.c  Hacker.c  Int128.c  Int256.c  Memory.c  README  String.c  XMLCan.c  XMLGen.c  test_Flip16.c
LAO/CDT/BSL/0/: Flip32.0  Flip64.0  Int128.0  XMLCan.0
LAO/CDT/BSL/1/: BBTree.1  Buffer.1  ETable.1  Hacker.1  Int128.1  Int256.1  String.1  XMLCan.1
LAO/CDT/BSL/IeeeCC754/: CMakeLists.txt  readme.usage
LAO/CDT/BSL/IeeeCC754/BasicOp/Flip/: BasicOptest.cc  fpenv_Flip.cc
LAO/CDT/BSL/IeeeCC754/BasicOp/testsets/: add  divide  multiply  remainder  sqrt
LAO/CDT/BSL/IeeeCC754/Conversion/Flip/: Conversiontest.cc
LAO/CDT/BSL/IeeeCC754/Conversion/testsets/: b2dconvd  b2dconvl  b2dconvm  b2dconvq  b2dconvs  cint32  cint64  copyto  cuint32  cuint64  d2bconvd  d2bconvl  d2bconvm  d2bconvq  d2bconvs  remainder  rint32  rint64  rintegral  roundto  ruint32  ruint64  sqrt
LAO/CDT/BSL/IeeeCC754/include/: Bitstring.h  DriverFloatRepr.h  Fp.h  Hex.h  Types.h  UCB.h
LAO/CDT/BSL/IeeeCC754/src/: IeeeCC754.cc  bitstring.cc  fp.cc  hex.cc
LAO/CDT/BSL/testsoftfloat/: CMakeLists.txt  fail.c  fail.h  milieu.h  random.c  random.h  slowfloat.c  slowfloat.h  softfloat.h  st122-tcg.h  st220-pro64.h  testCases.c  testCases.h  testLoops.c  testLoops.h  testsoftfloat.c  writeHex.c  writeHex.h
LAO/CDT/CAL/: CAL.c  CMakeLists.txt  DGraph.c  Dominators.c  Hierarchy.c  LProgram.c  Network.c  README
LAO/CDT/CAL/1/: DGraph.1  Dominators.1  Hierarchy.1  Network.1
LAO/CDT/CCL/: BitSet.c  CCL.c  CMakeLists.txt  HTable.c  IArray.c  IBList.c  IDList.c  IETree.c  IQueue.c  IStack.c  Indexed.c  PQueue.c  PtrMap.c  PtrSeq.c  PtrSet.c  README  Scoped.c  Sparse.c  TSTree.c
LAO/CDT/CCL/1/: BitSet.1  IDList.1  IETree.1  IQueue.1  PtrSeq.1  PtrSet.1  Scoped.1  Sparse.1  TSTree.1
LAO/CDT/DOC/: Declare.y  UserGuide.wlm  WLMDoc.wlm  index.wlm
LAO/CDT/LIB/: Declare.pa  Declare.pm
LAO/DOC/: CCodingStyle.doxy  CCodingStyle.wlm  CodingRules.doxy  CodingRules.wlm  Hacking.wlm  HowTo.wlm  Intro.wlm  Issues.wlm  JITDesign.tex  LIR.dtd  Makefile.in  MustKnow.wlm  Tutorial.doxy  Tutorial.wlm  Upstream.wlm  coding_style.dox  design_notes.dox  index.wlm  to_do_list.dox
LAO/DOC/CSS/: article.css  default.css  report.css
LAO/ECL/: CMakeLists.txt  ECL.h.in  lao.c  laoi.c  laoi.ggo
LAO/ECL/CGO/: Accelerator.c  Allocator.c  CGO.c  CMakeLists.txt  ControlFlow.c  DomTreeScan.c  ELinearScan.c  PostPass.c  PrePass.c  Predicator.c  Spill.c
LAO/ECL/CGO/0/: PrePass.0  Predicator.0  Spill.0
LAO/ECL/JIT/: CMakeLists.txt  CodeBuffer.c  Compiler.c  Context.c  ExecutionEngine.c  Interpreter.c  JIT.c  Trampoline_dummy.c
LAO/ECL/LIR/: BasicBlock.c  CMakeLists.txt  CodeRegion.c  Configure.c  Data.c  Dependence.c  LIR.c  LoopScope.c  Minir.c  Operation.c  Optimize.c  Procedure.c  Program.c  Selector.c  Temporary.c  Tirex.c  Variable.c
LAO/ECL/LIR/0/: Data.0  Minir.0  Selector.0
LAO/ECL/PFA/: Boissinot.c  CMakeLists.txt  Coalescer.c  CodeLayout.c  Deallocator.c  Decoalescer.c  Dominance.c  Interference.c  LiveCheck.c  LiveSets.c  Liveness.c  LoopForest.c  OldLiveCheck.c  PFA.c  SSAConstruct.c  SSAForm.c  Sreedhar.c  SuperBlock.c  ValueNumber.c
LAO/ECL/PFA/0/: Dominance.0  LiveCheck.0  LoopForest.0  SSAForm.0  Sreedhar.0  ValueNumber.0
LAO/PRO/: CMakeLists.txt  PRO.h.in  lao3.c
LAO/PRO/O64/: CGIR.c  CMakeLists.txt  Interface.c  O64.c
LAO/PRO/SCD/: Acyclic.c  CMakeLists.txt  Construction.c  FastList.c  Formulation.c  GrahamList.c  Insertion.c  RCMS.c  Relaxation.c  SCD.c  Scheduler.c
LAO/PRO/XFA/: BlockTrace.c  CFGraph.c  CMakeLists.txt  DDGraph.c  Effect.c  Issue.c  Lifetime.c  RegionFlow.c  XFA.c
LAO/RE2C/: code.c  scanner.c  scanner.re
LAO/TSL/: CMakeLists.txt  TSL.h.in
LAO/TSL/AIR/: AIR.c  CMakeLists.txt  CodeTrace.c  Common.c  Frame.c  Instruction.c  Label.c  Literal.c  NativeBlock.c  NativeStream.c  Object.c  Scoreboard.c  Section.c  Symbol.c  TopDown.c  Trampoline.c
LAO/TSL/MDT/: Behavior.c  Bundle.c  Bundling.c  CMakeLists.txt  Convention.c  Decode.c  Decoding.c  Format.c  Immediate.c  MDT.c  Modifier.c  NativeType.c  Opcode.c  Operand.c  Operator.c  Platform.c  Processor.c  RegClass.c  RegFile.c  RegMask.c  Register.c  Relocation.c  Reservation.c  Resource.c  Scheduling.c  Storage.c  Template.c
LAO/kvx/: kv3-Behavior.c  kv3-Builtin.c  kv3-Bundle.c  kv3-Deallocator.c  kv3-Decode.c  kv3-Interpreter.c  kv3-JIT.c  kv3-MDT.c  kv3-Modifier.c  kv3-NativeBlock.c  kv3-Opcode.c  kv3-Operation.c  kv3-Operator.c  kv3-Selector.c  kv3-Template.c
LAO/kvx/kv3/: Behavior.tuple  Bundle.tuple  Bundling.tuple  Convention.tuple  Decoding.tuple  Format.tuple  Immediate.tuple  Modifier.tuple  NativeType.tuple  Opcode.tuple  Operand.tuple  Operator.tuple  Platform.tuple  Processor.tuple  RegClass.tuple  RegFile.tuple  RegMask.tuple  Register.tuple  Relocation.tuple  Reservation.tuple  Resource.tuple  Scheduling.tuple  Storage.tuple
LAO/kvx/kv3/v1/: Boissinot.1  Bundle.1  Bundling.1  Configure.1  Convention.1  Data.1  Deallocator.1  Decoding.1  Dominance.1  FastList.1  Format.1  HTable.1  IBList.1  IStack.1  Immediate.1  Interference.1  LIR.1  LProgram.1  LiveCheck.1  LoopForest.1  Memory.1  Minir.1  Modifier.1  NativeType.1  OldLiveCheck.1  Opcode.1  Operation.1  Optimize.1  PQueue.1  Platform.1  Processor.1  RegClass.1  RegFile.1  RegMask.1  Register.1  Relaxation.1  Relocation.1  Reservation.1  Resource.1  SSAForm.1  (+9 more)
valid/hudson/: build.rb
